--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
     />
-    <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
-    />
+    <link rel="stylesheet" href="/themes/vue.css" />
   </head>
   <body>
     <div id="app"></div>
@@ -25,6 +22,6 @@
         subMaxLevel: 2,
       };
     </script>
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <script src="/js/docsify.min.js"></script>
   </body>
 </html>
