--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         loadSidebar: true,
         loadNavbar: true,
         subMaxLevel: 2,
+				search : 'auto',
       };
     </script>
     <script src="/js/docsify.min.js"></script>
+		<script src="/js/search.min.js"></script>
   </body>
 </html>
